Archive/fe626d87a56376d9a2bd71d7c30b069a-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:5:31: error: conversion from 'int' to non-scalar type 'std::function<void()>' requested
     std::function<void()> f = 17;
                               ^
